Changes to routing, utilization of preact and htm libraries

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, React" />
     <meta name="author" content="Davor Jovanovic" />
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/index.css" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/tab icon.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/tab icon.png" />
     <title>To do app</title>
   </head>
   <body>
     <div id="navbar"></div>
-    <div id="kartice"></div>
-    <div id="thrash"></div>
+    <div id="homepage"></div>
+    <div id="trash"></div>
     <script type="module" src="%PUBLIC_URL%/dist/index.js"></script>
   </body>
 </html>
