--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,12 @@
     <meta name="description" content="Improved to do list created in React" />
     <meta name="keywords" content="HTML, CSS, JavaScript, React" />
     <meta name="author" content="Davor Jovanovic" />
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/index.css" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/tab icon.png" />
+    <link rel="stylesheet" type="text/css" href="/index.css" />
     <title>To do app</title>
   </head>
   <body>
-    <div id="navbar"></div>
-    <div id="homepage"></div>
-    <div id="trash"></div>
-    <script type="module" src="%PUBLIC_URL%/dist/index.js"></script>
+  <div id="homepage">  {{homepage}}</div>
+
+  <script type="module" src="/app.js"></script>
   </body>
 </html>
